
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CPUP_CONF_DCPUP ;
 int PORT_CONF0_DP_SHIFT ;
 int SWITCH_PORTS_HW ;
 int SWITCH_REG_CPUP_CONF ;
 int SWITCH_REG_GPIO_CONF0 ;
 int SWITCH_REG_GPIO_CONF2 ;
 int SWITCH_REG_PORT0_LED ;
 int SWITCH_REG_PORT1_LED ;
 int SWITCH_REG_PORT2_LED ;
 int SWITCH_REG_PORT3_LED ;
 int SWITCH_REG_PORT4_LED ;
 int SWITCH_REG_PORT_CONF0 ;
 int SWITCH_WRITE (int ,int) ;

__attribute__((used)) static void switch_init(void)
{

 SWITCH_WRITE(SWITCH_REG_PORT_CONF0,
     (SWITCH_PORTS_HW << PORT_CONF0_DP_SHIFT));


 SWITCH_WRITE(SWITCH_REG_CPUP_CONF, CPUP_CONF_DCPUP);


 SWITCH_WRITE(SWITCH_REG_GPIO_CONF0, 0);
 SWITCH_WRITE(SWITCH_REG_GPIO_CONF2, 0);


 SWITCH_WRITE(SWITCH_REG_PORT0_LED, 0);
 SWITCH_WRITE(SWITCH_REG_PORT1_LED, 0);
 SWITCH_WRITE(SWITCH_REG_PORT2_LED, 0);
 SWITCH_WRITE(SWITCH_REG_PORT3_LED, 0);
 SWITCH_WRITE(SWITCH_REG_PORT4_LED, 0);
}
